--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Local Computer Repair & Virus Removal - No Fix, No Fee | PC Services</title>
     <meta name="description" content="Professional computer cleanup, virus removal, and upgrades. Same-day service with No Fix, No Fee guarantee. Local PC repair starting from £10." />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="TuneUp Hero" />
 
     <meta property="og:title" content="Local Computer Repair & Virus Removal - No Fix, No Fee" />
     <meta property="og:description" content="Professional computer cleanup, virus removal, and upgrades. Same-day service with No Fix, No Fee guarantee. Local PC repair starting from £10." />
     <meta property="og:type" content="website" />
-
+    <link rel="icon" type="image/png" href="/dist/assets/imagehead.png" />
 
   </head>
 
