--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Local Computer Repair & Virus Removal - No Fix, No Fee" />
     <meta property="og:description" content="Professional computer cleanup, virus removal, and upgrades. Same-day service with No Fix, No Fee guarantee. Local PC repair starting from £10." />
     <meta property="og:type" content="website" />
-    <link rel="icon" type="image/png" href="/dist/assets/imagehead.png?v=2" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
 
   </head>
 
