--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Local Computer Repair & Virus Removal - No Fix, No Fee | PC Services</title>
+    <title>Computer Services - No Fix, No Fee </title>
     <meta name="description" content="Professional computer cleanup, virus removal, and upgrades. Same-day service with No Fix, No Fee guarantee. Local PC repair starting from £10." />
     <meta name="author" content="TuneUp Hero" />
 
